// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validate HealthSourceInputset should render HealthSourceInputset 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardStyle"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-card-title StyledProps--color StyledProps--color-black"
      >
        cv.templates.healthSourceDetails
      </p>
      <span
        class="bp3-icon StyledProps--main"
        data-icon="spinner"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 36 36"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
            stroke="currentColor"
            stroke-dasharray="75,100"
            stroke-linecap="round"
            stroke-width="2.8"
            style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Validate HealthSourceInputset should render HealthSourceInputset 2`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="bp3-card bp3-elevation-0 Card--card cardStyle"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-card-title StyledProps--color StyledProps--color-black"
      >
        cv.templates.healthSourceDetails
      </p>
      <span
        class="bp3-icon StyledProps--main"
        data-icon="spinner"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 36 36"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
            stroke="currentColor"
            stroke-dasharray="75,100"
            stroke-linecap="round"
            stroke-width="2.8"
            style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Validate HealthSourceInputset should render HealthSourceInputset in error state 1`] = `
<div>
  <div
    class="bp3-card bp3-elevation-0 Card--card cardStyle"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-variation-card-title StyledProps--color StyledProps--color-black"
    >
      cv.templates.healthSourceDetails
    </p>
    <div
      class="StyledProps--font StyledProps--main PageError--pageError StyledProps--flex StyledProps--flex-align-center-center"
      style="width: 100%; height: 100%;"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
        style="align-items: center; width: 500px;"
      >
        <span
          class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500"
          icon="error"
        >
          <svg
            data-icon="error"
            height="32"
            viewBox="0 0 20 20"
            width="32"
          >
            <desc>
              error
            </desc>
            <path
              d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-align-center StyledProps--color StyledProps--color-red500"
        >
          api call failed
        </p>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Retry
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Validate HealthSourceInputset should render HealthSourceInputset in loading state 1`] = `
<div>
  <div
    class="bp3-card bp3-elevation-0 Card--card cardStyle"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-variation-card-title StyledProps--color StyledProps--color-black"
    >
      cv.templates.healthSourceDetails
    </p>
    <span
      class="bp3-icon StyledProps--main"
      data-icon="spinner"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 36 36"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
          stroke="currentColor"
          stroke-dasharray="75,100"
          stroke-linecap="round"
          stroke-width="2.8"
          style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Validate HealthSourceInputset should render HealthSourceInputset in no data state 1`] = `
<div>
  <div
    class="bp3-card bp3-elevation-0 Card--card cardStyle"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-variation-card-title StyledProps--color StyledProps--color-black"
    >
      cv.templates.healthSourceDetails
    </p>
    <span
      class="bp3-icon StyledProps--main"
      data-icon="spinner"
    >
      <svg
        fill="none"
        height="16"
        viewBox="0 0 36 36"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
          stroke="currentColor"
          stroke-dasharray="75,100"
          stroke-linecap="round"
          stroke-width="2.8"
          style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
        />
      </svg>
    </span>
  </div>
</div>
`;
